--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "angular": "^1.8.3",
+    "angular-route": "^1.8.3",
     "bootstrap": "^5.3.0-alpha1",
     "jquery": "^3.6.4"
   },
